# PlaylistManager

backend/: CMakeLists.txt  cert.pem  config.json  key.pem
backend/controllers/: Playlist.cc  Playlist.h
backend/include/: SpotifyAuth.h  YouTubeAuth.h
backend/src/: SpotifyAuth.cpp  YouTubeAuth.cpp  main.cpp
backend/tests/: test_main.cpp
frontend/: package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.js  index.js
frontend/src/components/: Header.js  Home.js  Playlists.js
frontend/src/styles/: Home.css  Playlists.css
